--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <h1>Everbridge</h1>
+        <h1><span>Hus</span>tleInt<span>ern</span></h1>
         <ul class="ul1">
             <li><a href="a">Our program</a></li>
             <li><a href="b">Testimonies</a></li>
@@ -31,21 +31,20 @@
     <form class="formx">
         <div class="formbox">
             <div class="diva">
-        <h5>Subscribe to our free weekly newsletter</h5>
+        <h5>Subscribe to Our Free Weekly Newsletter</h5>
         </div>
         <div class="divide">
-        <input type="text" placeholder="Fullname"><br> 
+        <input type="text" placeholder="Fullname" required><br> 
         </div>
         <div class="divide2">
-            <input type="email" placeholder="me@email.com"
+            <input type="email" placeholder="me@email.com" required>
         </div>
-        <button type="submit" class="sub">Sign up</botton>    
+        <button onclick="alert('Your details has been successfully submitted, Thank You!')" class="sub">Sign up</botton>    
         </div>
         </form>
 </section>
+<div class="last">
+    <p class="lp">Sign Up to Get Started Today!!!</p>
+</div>
 </body>
 </html>
-<script>
-
-    alert("hello welcome to my page");
-</script>
