--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <section>
     <div class="box">
         <h1>Become a world<br> class Web developer<br> and attact a high paying job in just a month</h1>
-<p>join us today in our training program and get a highly sought after by top local & foreigh companies</p>
+<p>Join us today in our training program and get a highly sought after job by top local & foreigh companies</p>
     </div>
     <div class="apply">
-        <button type="onclick">Apply Now</button>
+        <button type="onclick" class="apply"><a href="w"> Apply Now </a></button>
     </div>
     <form class="formx">
         <div class="formbox">
