--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
     </nav>
     <section>
     <div class="box">
-        <h1>Become a world<br> class Web developer<br> and attact a high paying job in just a month</h1>
+        <h1 class="h01">Become a world<br> class Web developer<br> and attact a high paying job in just a month</h1>
 <p>Join us today in our training program and get a highly sought after job by top local & foreigh companies</p>
-    </div>
-    <div class="apply">
         <button type="onclick" class="apply"><a href="w"> Apply Now </a></button>
     </div>
     <form class="formx">
