--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <button onclick="alert('Your details has been successfully submitted, Thank You!')" class="sub">Sign up</botton>    
         </div>
         </form>
-</section>
-<div class="last">
-    <p class="lp">Sign Up to Get Started Today!!!</p>
-</div>
+    </section>
+    <div class="last">
+        <div class="pl">Sign up today to get Started!</div>
+    </div>
 </body>
 </html>
